--- a/About_us.html
+++ b/About_us.html
@@ -70,7 +70,7 @@
                 <p>Polyglot & Learning Coach</p>
                 <p>Jatin has mastered five languages and loves sharing tips and tricks to help others succeed in their learning journey.</p>
                 <p>
-                    <a href="https://twitter.com/johnsmith" target="_blank">LinkedIn</a> | 
+                    <a href="https://www.linkedin.com/in/jatin-dhull-1053b3291/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a> | 
                     <a href="https://www.instagram.com/jatin.00071/" target="_blank">Instagram</a>
                 </p>
             </div>
