--- a/Homepage.html
+++ b/Homepage.html
@@ -43,21 +43,7 @@
                             </ul>
                         </div>
                         <div id="loginContainer">
-                            <a class="btn btn-primary" href="#" id="loginButton">Login</a>
-                        </div>
-                        <div id="profileContainer" class="d-none">
-                            <div class="dropdown">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" id="profileDropdown"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="fas fa-user"></i> Profile
-                                </button>
-                                <ul class="dropdown-menu" aria-labelledby="profileDropdown">
-                                    <li><a class="dropdown-item" href="#">My Account</a></li>
-                                    <li><a class="dropdown-item" href="#">Settings</a></li>
-                                    <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="#" id="logoutButton">Log out</a></li>
-                                </ul>
-                            </div>
+                            <a class="btn btn-primary" href="Login.html" id="loginButton">Login</a>
                         </div>
                     </div>
                 </div>
@@ -107,7 +93,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Spanish for Beginners</h5>
                             <p class="card-text">Start your journey in Spanish with our comprehensive beginner's course.</p>
-                            <a href="#" class="btn btn-primary">Enroll Now</a>
+                            <a href="languages.html" class="btn btn-primary">Enroll Now</a>
                         </div>
                     </div>
                 </div>
@@ -117,7 +103,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Hindi for Culture</h5>
                             <p class="card-text">Learn Hindi for professional settings and business interactions.</p>
-                            <a href="#" class="btn btn-primary">Enroll Now</a>
+                            <a href="languages.html" class="btn btn-primary">Enroll Now</a>
                         </div>
                     </div>
                 </div>
@@ -127,7 +113,7 @@
                         <div class="card-body">
                             <h5 class="card-title">French Intermediate</h5>
                             <p class="card-text">Take your French to the next level with our intermediate course.</p>
-                            <a href="#" class="btn btn-primary">Enroll Now</a>
+                            <a href="languages.html" class="btn btn-primary">Enroll Now</a>
                         </div>
                     </div>
                 </div>
@@ -207,11 +193,7 @@
             });
 
             
-            const loginButton = document.getElementById('loginButton');
-            loginButton.addEventListener('click', function(e) {
-                e.preventDefault();
-                alert('Login functionality to be implemented');
-            });
+            
         });
     </script>
 </body>
