--- a/Homepage.html
+++ b/Homepage.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Best site for language learning">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TalkTrek - Language Learning</title>
     <link rel="stylesheet" href="Homepage.css">
@@ -191,9 +192,6 @@
                     console.log(`Language changed to: ${selectedLanguage}`);
                 });
             });
-
-            
-            
         });
     </script>
 </body>
