--- a/hindi_diam_lvl.html
+++ b/hindi_diam_lvl.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="hindi_diam_lvl.css">
 </head>
 <body>
-    <img src="logo1.png" alt="Logo" class="logo">
+    <a href="Homepage.html"> <!-- Add your homepage URL here -->
+        <img src="logo1.png" alt="Logo" class="logo">
+    </a>
     <div class="map-container">
         <img src="hindi_diam_lvl.png" alt="Game Map" class="map-image" usemap="#game-map">
         <map name="game-map">
-            <area shape="circle" coords="31%,27%,5%" href="#" alt="Level 1">
-            <area shape="circle" coords="43%,40%,5%" href="#" alt="Level 2">
-            <area shape="circle" coords="38%,55%,5%" href="#" alt="Level 3">
-            <area shape="circle" coords="33%,70%,5%" href="#" alt="Level 4">
+            <area shape="circle" coords="31%,27%,5%" href="#" alt="Level 6">
+            <area shape="circle" coords="43%,40%,5%" href="#" alt="Level 7">
+            <area shape="circle" coords="38%,55%,5%" href="#" alt="Level 8">
+            <area shape="circle" coords="33%,70%,5%" href="#" alt="Level 9">
             <area shape="circle" coords="55%,40%,5%" href="#" alt="Star">
             <area shape="circle" coords="28%,85%,5%" href="#" alt="Target">
         </map>
-        <a href="#" class="map-area" id="level1" data-title="Level 1"></a>
-        <a href="#" class="map-area" id="level2" data-title="Level 2"></a>
-        <a href="#" class="map-area" id="level3" data-title="Level 3"></a>
-        <a href="#" class="map-area" id="level4" data-title="Level 4"></a>
+        <a href="#" class="map-area" id="level6" data-title="Level 6"></a>
+        <a href="#" class="map-area" id="level7" data-title="Level 7"></a>
+        <a href="#" class="map-area" id="level8" data-title="Level 8"></a>
+        <a href="#" class="map-area" id="level9" data-title="Level 9"></a>
         <a href="#" class="map-area" id="star" data-title="Star"></a>
         <a href="#" class="map-area" id="target" data-title="Target"></a>
     </div>
